# micro-onnx

./: .gitignore  README.md  pyproject.toml
micro_onnx/: __init__.py  benchmark.py  export.py  optimize.py  profiles.py  validate.py
micro_onnx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
npm/: package-lock.json  package.json  tsconfig.json
npm/src/: index.ts
tests/: test_benchmark.py  test_export.py  test_optimize.py  test_validate.py
